--- a/client/src/sass/_about.scss
+++ b/client/src/sass/_about.scss
@@ -15,11 +15,16 @@
   .about-wrapper {
     display: flex;
     .img-portrait {
-      width: 200px;
-      height: 200px; 
+      width: 277px ;
+      height: 253px; 
       box-shadow : 2px 4px 30px rgba(29,32,126,0.17);
       margin: auto;
       border-radius: 25px;
+      img {
+        width: 100%;
+        height: 100%;
+        border-radius: 25px;
+      }
     }
     p {
       width: 60%;
@@ -67,10 +72,22 @@
     margin-bottom: 100px;
     display: flex;
     position: relative;
+    height: 100%;
+    padding-bottom: 40px;
+    .background {
+      position: absolute;
+      top: 0;
+      left: -50vw;
+      width: 150vw;
+      height: 100%;
+      background-color: $background;
+      z-index: -1;
+    }
     .hex-left {
       position: absolute;
       top: -250px;
       left: -600px;
+      z-index: 1;
       img {
         transform: rotate(-10deg);
       }
@@ -80,6 +97,7 @@
       position: absolute;
       top: 40px;
       right: -600px;
+      z-index: 1; 
     }
     .text-wrapper {
       width: 60%; 
@@ -105,11 +123,12 @@
     margin-top: 20px;
     margin-left: 100px;
     opacity: 0.2;
+    z-index: 0;
     }
   }
   .located-con {
     margin: auto;
-    margin-bottom: 100px;
+    // margin-bottom: 100px;
     display: flex;
     flex-direction: column;
     margin-top: 100px;
@@ -158,7 +177,7 @@
     
   .technologies {
     margin-top: 0px;
-    height: 600px;
+    // height: 600px;
     .hex-left , .hex-right {
     display: none;
     }
@@ -208,7 +227,7 @@
     
   .technologies {
     margin-top: 0px;
-    height: 400px;
+    // height: 400px;
     .hex-left , .hex-right {
     display: none;
     }
@@ -259,7 +278,7 @@
     
   .technologies {
     margin-top: 0px;
-    height: 400px;
+    // height: 400px;
     .hex-left , .hex-right {
     display: none;
     }
