--- a/client/src/sass/_footer.scss
+++ b/client/src/sass/_footer.scss
@@ -1,7 +1,7 @@
 .footer {
   display: flex;
   height: 300px;
-  margin-top: 100px;
+  // margin-top: 100px;
   .footer-nav, .footer-services {
     display: flex;
     flex-direction: column;
