--- a/client/src/sass/_portfolio.scss
+++ b/client/src/sass/_portfolio.scss
@@ -2,19 +2,22 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    margin-bottom: 200px;
+    // margin-bottom: 200px;
     .portfolio-grid {
-      margin: 100px 0;
+      // margin: 100px 0;
+      margin-top: 100px;
       display: grid;
       grid-template-columns: repeat(2, 1fr);
       gap : 50px;
       li {
         list-style-type: none;
         width: 100%;
-        width: 100%;
-        height: 260px;
+        // height: 260px;
         border-radius: 5px;
         transition: height 0.5s;
+        display: flex;
+        flex-direction: column;
+
       }
       .project-img-con {
         position: relative;
@@ -37,7 +40,9 @@
       .project-info-con {
         position: relative;
         grid-column: 2;
-        height: 500px;
+        // height: 100%;
+        display: flex;
+        flex-direction: column;
         width :100%;
         transition: 0.5s;
         .project-title {
@@ -91,16 +96,28 @@
           font-size: 1.1rem;
           text-decoration: none;
           box-shadow : 2px 4px 30px rgba(29,32,126,0.17);
-          transition: 0.5s;
+          transition: 0.3s;
         }
         a:hover {
-          box-shadow : 2px 4px 30px rgba(29,32,126,0.50);
+          background-color: $buttonHover;
+          color: $background;
          } 
         }
 
         .text-bottom {
           margin-top: 260px;
           position: relative;
+          z-index: 0;
+          padding-top: 50px;
+          .background-con {
+            position: absolute;
+            top: 0;
+            left: -60vw;
+            width: 110vw;
+            height: 350px;
+            background-color: $heading;
+            z-index: -5;
+          }
           .hex-left {
             position: absolute;
             top: -300px;
@@ -119,7 +136,6 @@
             font-weight: 600;
             font-family: $headingFont;
             margin-bottom: 15px;
-            
           }
           p {
             color: white;
@@ -140,7 +156,14 @@
             font-size: 1.1rem;
             text-decoration: none;
             box-shadow : 2px 4px 30px rgba(29,32,126,0.17);
-            transition: 0.5s;
+            transition: 0.3s;
+          }
+          a:hover {
+            background-color: $buttonHover;
+            color: $background;
+          }
+          a:active {
+            transform: scale(1.1);
           }
           
         }  
@@ -219,7 +242,7 @@
 
 @media (min-width: 787px) and(max-width: 1100px ) {
   .portfolio-container {
-    margin-bottom: 370px;
+    // margin-bottom: 370px;
     .portfolio-grid {
       .project-info-con {
       .text-bottom {
